argocd/infra/istio_gateway/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
